Wed May 14 11:50:13 2025 adamy

	* build-234

		o shell quoting (#139)
		o command view, non-panel mode (#137)
		o specialised x64 manifest name
		o several toolchain issues

Wed Apr 23 17:33:24 2025 adamy

	* build-233

		o Ed25519 support (#129) libappupdater-1.0.3
		o handle resource leak (#128)
		o utilize GitHub for updater (#127)
		o mchelp locale (#126)
		o mcstart enhancements (#124)

Mon Apr 14 20:01:53 2025 adamy

	* build-232

		o documentation enhancements
		o mcstart, file-extension utility (#124)
		o MSTerminal maximize disabled (#122)
		o obey NODRIVES group policy (#121)
		o getmntinfo, networked/mapped drive (#120)
		o script enhancements, MC_XDG_OPEN as "start" (#119)
		o non-ascii group name handling (#118)
		o mandoc / mchelp integration (#116)
		o stat/seek64 (#35) and (#89)
		o unzip vfs (#88)
		o mc-wrapper's (#69)
		o ESC timeout, -1 enables an infinite wait (#36)

Wed Mar 19 16:03:57 2025 adamy

	* build-231

	* 4.8.33 merge (#94)

	* internal tools front-ends, externalized (#78)

		o mcedit
		o mcdiff and mcbsddiff (diff backend)
		o mcview

	* upgrades/bugfixes

		o vio: wide-character handling (#115)
		o wputenv() cross tool-chain usage (#113)
		o pcre2 10.45 (#106)
		o appupdater (#102)
		o glib 2.54.3 (#102)
		o zlib-1.3.1 (#102)
		o mbedtls-3.6.2 (#100)
		o improved UNC and extended prefix support, plus stat optimisations (#98)
		o libssh2-1.11.1 (#95)
		o enhanced utf8 support, directory plus username; non-ascii user name support (#97)
		o EXDEV, cross-device detection rename failure; allowing alt move logic (#85)
		o x64 installer path (#79)

Wed Mar 20 20:30:50 2024 adamy

	* build-230

	* 4.8.31 merge (#70)

	* upgrades/bugfixes

		o mbedtls 3.5.2 (#67)
		o AltGr detection (#71, #52)
		o mcdiff integration (#74)
		o cd/cdpath (#72)

	* x64 binary (Beta)

Sun Nov 12 11:36:11 2023 adamy

	* build-229

	* 4.8.30 merge

	* package upgrades

		o libappupdater 1.0.2
		o pcre2 10.42
		o mbedtls 3.4.1
		o enca 1.19
		o file 5.45