@@ -33,6 +33,7 @@ using wildcard characters.
 
                            - upgrades/bug-fixes
 
+                                   o improve powershell support (#140)
                                    o shell quoting (#139)
                                    o command view, subshell alternative; no-panel mode (#137)
                                    o specialised x64 manifest name
