@@ -1,5 +1,5 @@
 #include <edidentifier.h>
-__CIDENT_RCSID(gr_w32_child_c,"$Id: w32_child.c,v 1.27 2025/04/23 06:41:44 cvsuser Exp $")
+__CIDENT_RCSID(gr_w32_child_c,"$Id: w32_child.c,v 1.28 2025/05/14 13:42:32 cvsuser Exp $")
 
 /* -*- mode: c; indent-width: 4; -*- */
 /*
@@ -66,8 +66,8 @@ typedef struct {
     int                 fd;
 } Redirect_t;
 
-static int              cmdisA(const char *shell, int slen, const char *cmd);
-static int              cmdisW(const wchar_t *shell, int slen, const wchar_t *cmd);
+static int              cmdisA(const char *shell, size_t slen, const char *cmd);
+static int              cmdisW(const wchar_t *shell, size_t slen, const wchar_t *cmd);
 static int              TOLOWER(wchar_t ch);
 
 static BOOL             SendCloseMessage(HANDLE hProc);
@@ -529,7 +529,7 @@ SendCloseMessage(HANDLE hProc)
 
 /*
  *  w32_iscommand ---
- *      Determine the given shell is a DOS/WIN command processor
+ *      Determine whether the given shell is a DOS/WIN command processor.
  */
 LIBW32_API int
 w32_iscommand(const char *shell)
@@ -552,7 +552,7 @@ w32_iscommand(const char *shell)
 LIBW32_API int
 w32_iscommandA(const char *shell)
 {
-    const int slen = (int)strlen(shell);
+    const size_t slen = strlen(shell);
 
     if (cmdisA(shell, slen, "cmd") ||
             cmdisA(shell, slen, "cmd.exe") ||
@@ -568,7 +568,7 @@ w32_iscommandA(const char *shell)
 LIBW32_API int
 w32_iscommandW(const wchar_t *shell)
 {
-    const int slen = (int)wcslen(shell);
+    const size_t slen = wcslen(shell);
 
     if (cmdisW(shell, slen, L"cmd") ||
             cmdisW(shell, slen, L"cmd.exe") ||
@@ -581,10 +581,74 @@ w32_iscommandW(const wchar_t *shell)
 }
 
 
-static int
-cmdisA(const char *shell, int slen, const char *cmd)
+/*
+ *  w32_ispwsh ---
+ *      Determine whether the given shell is from the PowerShell processor family.
+ */
+LIBW32_API int
+w32_ispowershell(const char *shell)
 {
-    const int clen = (int)strlen(cmd);
+#if defined(UTF8FILENAMES)
+    if (w32_utf8filenames_state()) {
+        wchar_t wshell[WIN32_PATH_MAX];
+
+        if (w32_utf2wc(shell, wshell, _countof(wshell)) > 0) {
+            return w32_ispowershellW(wshell);
+        }
+        return -1;
+    }
+#endif  //UTF8FILENAMES
+
+    return w32_ispowershellA(shell);
+}
+
+
+LIBW32_API int
+w32_ispowershellA(const char *shell)
+{
+    const size_t slen = strlen(shell);
+
+    // legacy
+    if (cmdisA(shell, slen, "powershell") ||
+        cmdisA(shell, slen, "powershell.exe")) {
+        return 1;
+    }
+
+    // cross-platform
+    if (cmdisA(shell, slen, "pwsh") |
+        cmdisA(shell, slen, "pwsh.exe")) {
+        return 2;
+    }
+
+    return 0;
+}
+
+
+LIBW32_API int          
+w32_ispowershellW(const wchar_t *shell)
+{
+    const size_t slen = wcslen(shell);
+
+    // legacy
+    if (cmdisW(shell, slen, L"powershell") ||
+        cmdisW(shell, slen, L"powershell.exe")) {
+        return 1;
+    }
+
+    // cross-platform
+    if (cmdisW(shell, slen, L"pwsh") |
+        cmdisW(shell, slen, L"pwsh.exe")) {
+        return 2;
+    }
+
+    return 0;
+}
+
+
+static int
+cmdisA(const char *shell, size_t slen, const char *cmd)
+{
+    const size_t clen = strlen(cmd);
     const char *p = shell + slen - clen;
 
     if (slen == clen || (slen > clen && (p[-1] == '\\' || p[-1] == '/'))) {
@@ -597,9 +661,9 @@ cmdisA(const char *shell, int slen, const char *cmd)
 
 
 static int
-cmdisW(const wchar_t *shell, int slen, const wchar_t *cmd)
+cmdisW(const wchar_t *shell, size_t slen, const wchar_t *cmd)
 {
-    const int clen = (int)wcslen(cmd);
+    const size_t clen = wcslen(cmd);
     const wchar_t *p = shell + slen - clen;
 
     if (slen == clen || (slen > clen && (p[-1] == '\\' || p[-1] == '/'))) {
@@ -609,7 +673,6 @@ cmdisW(const wchar_t *shell, int slen, const wchar_t *cmd)
     }
     return FALSE;
 }
-
 
 
 /*
@@ -630,7 +693,7 @@ w32_child_execA(
     HANDLE hProc = 0;
 
     /*
-     *  Build env and command line.
+     *  Build environment and command line.
      */
     if (NULL == args || (NULL == args->cmd && NULL == args->argv)) {
         errno = EINVAL;
@@ -756,7 +819,7 @@ w32_child_execW(
     HANDLE hProc = 0;
 
     /*
-     *  Build env and command line.
+     *  Build environment and command line.
      */
     if (NULL == args || (NULL == args->cmd && NULL == args->argv)) {
         errno = EINVAL;
